[package]
name = "zoekt"
version = "0.1.0"
edition = "2021"
#module github.com/google/zoekt

#[lib]
#name = "zoekt"
#path = "src/lib.rs"

#require (
#	github.com/andygrunwald/go-gerrit v0.0.0-20191101112536-3f5e365ccf57
#	github.com/bmatcuk/doublestar v1.3.4
#	github.com/fsnotify/fsnotify v1.4.7
#	github.com/gfleury/go-bitbucket-v1 v0.0.0-20200104105711-ddbafbb02522
#	github.com/go-git/go-git/v5 v5.0.0
#	github.com/golang/protobuf v1.3.3 // indirect
#	github.com/google/go-cmp v0.5.5
#	github.com/google/go-github/v27 v27.0.6
#	github.com/google/slothfs v0.0.0-20190417171004-6b42407d9230
#	github.com/kylelemons/godebug v1.1.0
#	github.com/mitchellh/mapstructure v1.1.2 // indirect
#	github.com/pkg/errors v0.9.1 // indirect
#	github.com/prometheus/client_golang v1.5.1
#	github.com/xanzy/go-gitlab v0.25.0
#	go.uber.org/automaxprocs v1.3.0
#	golang.org/x/net v0.0.0-20210423184538-5f58ad60dda6
#	golang.org/x/oauth2 v0.0.0-20200107190931-bf48bf16ab8d
#	golang.org/x/sync v0.0.0-20190911185100-cd5d95a43a6e
#	google.golang.org/appengine v1.6.5 // indirect
#	gopkg.in/yaml.v2 v2.2.8 // indirect
#	humungus.tedunangst.com/r/gerc v0.1.2
#)

[dependencies]
clap = {version = "3.2.22", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
phf = { version = "0.11.0", features = ["macros"] }
dirs = "4.0.0"
itertools = "0.10.3"
crossbeam-channel = "0.5.6"
pprof = { version = "0.10.1", features = ["flamegraph"] }
anyhow = { version = "1.0.65" }
thiserror = { version = "1.0.37"}